--- a/code_understanding/pyproject.toml
+++ b/code_understanding/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "portfolio"
+name = "projects"
 version = "0.1.0"
 description = ""
 authors = ["jamesmorrissey11 <142894427+jamesmorrissey11@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 pandas = "^2.0.3"
 numpy = "^1.25.2"
 openai = "^0.27.8"
