--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
                 "--repo_dir", "/Users/jamesmorrissey/Github/projects/code_understanding/data/code/",
                 "--data_dir", "/Users/jamesmorrissey//projects/code_understanding/datasets/",
                 "--repo_url","https://github.com/hwchase17/langchain",
-                "--download", "no"
+                "--download", "yes"
             ],
             "env": {
                 "PYTHONPATH": "${workspaceFolder}/code_understanding"
@@ -26,9 +26,9 @@
             "cwd": "/Users/jamesmorrissey/Github/projects/code_understanding",
             "console": "integratedTerminal",
             "args": [
-                "--dataset",  "/Users/jamesmorrissey//projects/code_understanding/datasets/2023-08-31_01-16-44/data.json",
+                "--dataset",  "/Users/jamesmorrissey//projects/code_understanding/datasets/2023-08-31_07-32-40/data.json",
                 "--model_dir", "/Users/jamesmorrissey//projects/code_understanding/models/",
-                "--config_dir", "/Users/jamesmorrissey/Github/projects/code_understanding/app"
+                "--config_dir", "/Users/jamesmorrissey/Github/projects/code_understanding/config"
             ],
             "env": {
                 "PYTHONPATH": "${workspaceFolder}/code_understanding"
