--- a/code_understanding/pyproject.toml
+++ b/code_understanding/pyproject.toml
@@ -22,6 +22,7 @@ aioboto3 = "^11.3.0"
 deeplake = "^3.6.22"
 langchain = "^0.0.277"
 fastapi = "^0.103.0"
+google-search-results = "^2.4.2"
 
 
 [build-system]
